Implements E2E testing and show deletion (#11)
* Fix(segment): Fix unique constraint violation when updating segment participants

* Add logic to delete shows from UI

* Add end-to-end testing framework and initial test case for partial show lifecycle to test the pipeline

* Fix(segment): Update service retrieval in SegmentNarrationControllerTest to use provider-specific method

* Rename FullShowLifecycleE2EIT to FullShowLifecycleE2ETest and update Maven configuration for test inclusion

* Add global exception handler and enhance SegmentSummaryControllerTest with error handling

* Add SegmentAdjudicationService and update related tests for match adjudication

* Refactor DramaEventService to use injected Random instance and add unit tests for DramaEventService

* Add NPCSegmentResolutionServiceTest and ShowBookingServiceTest with unit tests for segment resolution logic

* Update NPCSegmentResolutionServiceTest to adjust random win probability for Team 1

* Refactor integration tests to remove unused WrestlerService and enhance transaction management

* Add end-to-end tests for card, deck, rivalry, season, and wrestler list views

* Add end-to-end tests for card creation, update, and deletion; implement UITestWatcher for failure handling

* Refactor SegmentOutcomeService to use wrestler's deck for finishing moves; add unit tests for outcome determination

* Refactor SegmentOutcomeService to use a random instance for dice rolls; enhance SegmentOutcomeServiceTest with generic wrestler setup and predictable random outcomes

* Add delete functionality to CardListView; implement confirmation dialog and update integration tests

* Refactor ShowPlanning services and DTOs to use non-null parameters; enhance upcoming shows retrieval logic

* Enhance parallel sync result handling; update success determination logic and adjust related tests

* feat: Refactor CardSet entity and add comprehensive tests

This commit refactors the CardSet entity to properly separate the 'name' and '