@@ -1,6 +1,8 @@
 package com.github.javydreamercsw.management.service.injury;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.verify;
@@ -11,18 +13,19 @@ import com.github.javydreamercsw.management.domain.injury.InjuryRepository;
 import com.github.javydreamercsw.management.domain.injury.InjurySeverity;
 import com.github.javydreamercsw.management.domain.wrestler.Wrestler;
 import com.github.javydreamercsw.management.domain.wrestler.WrestlerRepository;
+import com.github.javydreamercsw.management.domain.wrestler.WrestlerTier;
 import java.time.Clock;
 import java.time.Instant;
 import java.time.ZoneOffset;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.Random;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -43,7 +46,6 @@ class InjuryServiceTest {
   void setUp() {
     fixedClock = Clock.fixed(Instant.parse("2024-01-01T00:00:00Z"), ZoneOffset.UTC);
     lenient().when(clock.instant()).thenReturn(fixedClock.instant());
-    lenient().when(clock.getZone()).thenReturn(fixedClock.getZone());
   }
 
   @Test
@@ -59,6 +61,7 @@ class InjuryServiceTest {
               injury.setId(1L);
               return injury;
             });
+    when(random.nextInt(any(int.class))).thenReturn(1); // Control random for health penalty
 
     // When
     Optional<Injury> result =
@@ -72,7 +75,75 @@ class InjuryServiceTest {
     assertThat(result.get().getSeverity()).isEqualTo(InjurySeverity.SEVERE);
     assertThat(result.get().getWrestler()).isEqualTo(wrestler);
     assertThat(result.get().getIsActive()).isTrue();
+    assertThat(result.get().getHealthPenalty()).isEqualTo(4); // SEVERE min is 3, so 3 + 1 = 4
     verify(injuryRepository).saveAndFlush(any(Injury.class));
+  }
+
+  @ParameterizedTest(name = "Tier {0}, Roll {1} -> Severity {2}")
+  @CsvSource({
+    "ROOKIE, 34, MINOR",
+    "ROOKIE, 64, MODERATE",
+    "ROOKIE, 89, SEVERE",
+    "ROOKIE, 99, CRITICAL",
+    "RISER, 39, MINOR",
+    "RISER, 69, MODERATE",
+    "RISER, 91, SEVERE",
+    "RISER, 99, CRITICAL",
+    "CONTENDER, 44, MINOR",
+    "CONTENDER, 74, MODERATE",
+    "CONTENDER, 93, SEVERE",
+    "CONTENDER, 99, CRITICAL",
+    "MIDCARDER, 54, MINOR",
+    "MIDCARDER, 79, MODERATE",
+    "MIDCARDER, 95, SEVERE",
+    "MIDCARDER, 99, CRITICAL",
+    "MAIN_EVENTER, 59, MINOR",
+    "MAIN_EVENTER, 84, MODERATE",
+    "MAIN_EVENTER, 96, SEVERE",
+    "MAIN_EVENTER, 99, CRITICAL",
+    "ICON, 64, MINOR",
+    "ICON, 87, MODERATE",
+    "ICON, 97, SEVERE",
+    "ICON, 99, CRITICAL"
+  })
+  @DisplayName("Should create injury from bumps with correct severity based on tier and roll")
+  void testCreateInjuryFromBumpsSeverity(
+      WrestlerTier tier, int roll, InjurySeverity expectedSeverity) {
+    // Given
+    Wrestler wrestler = createWrestler("Test Wrestler", 50000L);
+    wrestler.setTier(tier);
+    wrestler.setBumps(3);
+    when(wrestlerRepository.findById(wrestler.getId())).thenReturn(Optional.of(wrestler));
+    when(random.nextInt(100)).thenReturn(roll - 1); // Control the d100 roll
+    when(random.nextInt(4)).thenReturn(0); // For injury name generation
+
+    when(injuryRepository.saveAndFlush(any(Injury.class)))
+        .thenAnswer(invocation -> invocation.getArgument(0));
+
+    // When
+    Optional<Injury> result = injuryService.createInjuryFromBumps(wrestler.getId());
+
+    // Then
+    assertTrue(result.isPresent());
+    assertEquals(expectedSeverity, result.get().getSeverity());
+  }
+
+  @Test
+  @DisplayName("Should attempt healing with a random roll")
+  void shouldAttemptHealingWithRandomRoll() {
+    // Given
+    Wrestler wrestler = createWrestler("Test Wrestler", 50000L);
+    Injury injury = createInjury(wrestler, InjurySeverity.MINOR);
+    when(injuryRepository.findById(1L)).thenReturn(Optional.of(injury));
+    when(wrestlerRepository.saveAndFlush(any(Wrestler.class))).thenReturn(wrestler);
+    when(random.nextInt(6)).thenReturn(5); // Roll a 6 (5+1)
+
+    // When
+    InjuryService.HealingResult result = injuryService.attemptHealing(1L, null);
+
+    // Then
+    assertTrue(result.success());
+    assertEquals(6, result.diceRoll());
   }
 
   @Test
@@ -96,7 +167,7 @@ class InjuryServiceTest {
 
     // Then
     assertThat(result).isNotNull();
-    Assertions.assertTrue(result.isPresent());
+    assertTrue(result.isPresent());
     assertThat(result.get().getWrestler()).isEqualTo(wrestler);
     assertThat(result.get().getIsActive()).isTrue();
     assertThat(wrestler.getInjuries()).contains(result.get());
@@ -189,68 +260,97 @@ class InjuryServiceTest {
   }
 
   @Test
+  @DisplayName("Should return empty when healing injury not found")
+  void shouldReturnEmptyWhenHealingInjuryNotFound() {
+    when(injuryRepository.findById(99L)).thenReturn(Optional.empty());
+    InjuryService.HealingResult result = injuryService.attemptHealing(99L, 3);
+    assertThat(result.success()).isFalse();
+    assertThat(result.message()).contains("Injury not found");
+  }
+
+  @Test
+  @DisplayName("Should return failure when injury cannot be healed")
+  void shouldReturnFailureWhenInjuryCannotBeHealed() {
+    Wrestler wrestler = createWrestler("Test Wrestler", 50000L);
+    Injury injury = createInjury(wrestler, InjurySeverity.MINOR);
+    injury.heal(); // Mark as healed
+    when(injuryRepository.findById(1L)).thenReturn(Optional.of(injury));
+    InjuryService.HealingResult result = injuryService.attemptHealing(1L, 3);
+    assertThat(result.success()).isFalse();
+    assertThat(result.message()).contains("cannot be healed");
+  }
+
+  @Test
+  @DisplayName("Should return failure when wrestler cannot afford healing cost")
+  void shouldReturnFailureWhenWrestlerCannotAffordHealingCost() {
+    Wrestler wrestler = createWrestler("Test Wrestler", 0L); // No fans
+    Injury injury = createInjury(wrestler, InjurySeverity.MINOR);
+    when(injuryRepository.findById(1L)).thenReturn(Optional.of(injury));
+    InjuryService.HealingResult result = injuryService.attemptHealing(1L, 3);
+    assertThat(result.success()).isFalse();
+    assertThat(result.message()).contains("cannot afford");
+  }
+
+  @Test
+  @DisplayName("Should get injury by ID")
+  void shouldGetInjuryById() {
+    Injury injury = new Injury();
+    injury.setId(1L);
+    when(injuryRepository.findById(1L)).thenReturn(Optional.of(injury));
+    Optional<Injury> result = injuryService.getInjuryById(1L);
+    assertThat(result).isPresent();
+    assertThat(result.get().getId()).isEqualTo(1L);
+  }
+
+  @Test
+  @DisplayName("Should get all injuries with pagination")
+  void shouldGetAllInjuriesWithPagination() {
+    Injury injury = new Injury();
+    when(injuryRepository.findAllBy(any()))
+        .thenReturn(new org.springframework.data.domain.PageImpl<>(List.of(injury)));
+    var result =
+        injuryService.getAllInjuries(org.springframework.data.domain.PageRequest.of(0, 10));
+    assertThat(result.getContent()).hasSize(1);
+  }
+
+  @Test
   @DisplayName("Should get active injuries for wrestler")
   void shouldGetActiveInjuriesForWrestler() {
-    // Given
     Wrestler wrestler = createWrestler("Test Wrestler", 50000L);
-    Injury injury1 = createInjury(wrestler, InjurySeverity.MINOR);
-    Injury injury2 = createInjury(wrestler, InjurySeverity.MODERATE);
-
     when(wrestlerRepository.findById(1L)).thenReturn(Optional.of(wrestler));
-    when(injuryRepository.findActiveInjuriesForWrestler(wrestler))
-        .thenReturn(Arrays.asList(injury1, injury2));
-
-    // When
+    Injury injury = new Injury();
+    when(injuryRepository.findActiveInjuriesForWrestler(wrestler)).thenReturn(List.of(injury));
     List<Injury> result = injuryService.getActiveInjuriesForWrestler(1L);
-
-    // Then
-    assertThat(result).hasSize(2);
-    assertThat(result).containsExactly(injury1, injury2);
+    assertThat(result).hasSize(1);
   }
 
   @Test
-  @DisplayName("Should get total health penalty for wrestler")
-  void shouldGetTotalHealthPenaltyForWrestler() {
-    // Given
+  @DisplayName("Should get all injuries for wrestler")
+  void shouldGetAllInjuriesForWrestler() {
     Wrestler wrestler = createWrestler("Test Wrestler", 50000L);
     when(wrestlerRepository.findById(1L)).thenReturn(Optional.of(wrestler));
-    when(injuryRepository.getTotalHealthPenaltyForWrestler(wrestler)).thenReturn(5);
-
-    // When
-    Integer result = injuryService.getTotalHealthPenaltyForWrestler(1L);
-
-    // Then
-    assertThat(result).isEqualTo(5);
+    Injury injury = new Injury();
+    when(injuryRepository.findByWrestler(wrestler)).thenReturn(List.of(injury));
+    List<Injury> result = injuryService.getAllInjuriesForWrestler(1L);
+    assertThat(result).hasSize(1);
   }
 
   @Test
-  @DisplayName("Should get injury statistics for wrestler")
-  void shouldGetInjuryStatisticsForWrestler() {
-    // Given
-    Wrestler wrestler = createWrestler("Test Wrestler", 50000L);
-    wrestler.setStartingHealth(15);
+  @DisplayName("Should get injuries by severity")
+  void shouldGetInjuriesBySeverity() {
+    Injury injury = new Injury();
+    when(injuryRepository.findBySeverity(InjurySeverity.MINOR)).thenReturn(List.of(injury));
+    List<Injury> result = injuryService.getInjuriesBySeverity(InjurySeverity.MINOR);
+    assertThat(result).hasSize(1);
+  }
 
-    Injury activeInjury = createInjury(wrestler, InjurySeverity.MINOR);
-    Injury healedInjury = createInjury(wrestler, InjurySeverity.MODERATE);
-    healedInjury.heal();
-
-    when(wrestlerRepository.findById(1L)).thenReturn(Optional.of(wrestler));
-    when(injuryRepository.findActiveInjuriesForWrestler(wrestler))
-        .thenReturn(List.of(activeInjury));
-    when(injuryRepository.findByWrestler(wrestler))
-        .thenReturn(Arrays.asList(activeInjury, healedInjury));
-    when(injuryRepository.getTotalHealthPenaltyForWrestler(wrestler)).thenReturn(2);
-
-    // When
-    InjuryService.InjuryStats result = injuryService.getInjuryStatsForWrestler(1L);
-
-    // Then
-    assertThat(result).isNotNull();
-    assertThat(result.wrestlerName()).isEqualTo("Test Wrestler");
-    assertThat(result.activeInjuries()).isEqualTo(1);
-    assertThat(result.healedInjuries()).isEqualTo(1);
-    assertThat(result.totalHealthPenalty()).isEqualTo(2);
-    assertThat(result.effectiveHealth()).isEqualTo(15); // Already includes penalty calculation
+  @Test
+  @DisplayName("Should get all active injuries")
+  void shouldGetAllActiveInjuries() {
+    Injury injury = new Injury();
+    when(injuryRepository.findAllActiveInjuries()).thenReturn(List.of(injury));
+    List<Injury> result = injuryService.getAllActiveInjuries();
+    assertThat(result).hasSize(1);
   }
 
   @Test
@@ -275,26 +375,8 @@ class InjuryServiceTest {
     verify(injuryRepository).saveAndFlush(injury);
   }
 
-  @Test
-  @DisplayName("Should get injuries by severity")
-  void shouldGetInjuriesBySeverity() {
-    // Given
-    Injury injury1 = createInjury(createWrestler("W1", 50000L), InjurySeverity.SEVERE);
-    Injury injury2 = createInjury(createWrestler("W2", 50000L), InjurySeverity.SEVERE);
-
-    when(injuryRepository.findBySeverity(InjurySeverity.SEVERE))
-        .thenReturn(Arrays.asList(injury1, injury2));
-
-    // When
-    List<Injury> result = injuryService.getInjuriesBySeverity(InjurySeverity.SEVERE);
-
-    // Then
-    assertThat(result).hasSize(2);
-    assertThat(result).containsExactly(injury1, injury2);
-  }
-
   private Wrestler createWrestler(String name, Long fans) {
-    Wrestler wrestler = new Wrestler();
+    Wrestler wrestler = Wrestler.builder().build();
     wrestler.setId(1L);
     wrestler.setName(name);
     wrestler.setFans(fans);
@@ -311,7 +393,7 @@ class InjuryServiceTest {
     injury.setName("Test Injury");
     injury.setDescription("Test injury description");
     injury.setSeverity(severity);
-    injury.setHealthPenalty(severity.getRandomHealthPenalty());
+    injury.setHealthPenalty(severity.getRandomHealthPenalty(random));
     injury.setHealingCost(severity.getBaseHealingCost());
     injury.setIsActive(true);
     injury.setInjuryDate(Instant.now(fixedClock));
